refactor: always use String as input for fields